--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Who Is Yosia</title>
   <link rel="stylesheet" href="mystyles.css">
   <script defer src="myjs.js"></script>
-  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+  <!-- <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script> -->
 </head>
 <body>
  
@@ -224,12 +224,19 @@
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYqSRhOThO0bu2tz-vomtGMn_bKQl-COELjA&s" alt="Email Icon">
           </div>
           <div class="contact-info">
-            <div class="label">Email</div>
-            <div class="value">yosiafarianto7@gmail.com</div>
+            <div class="label">Gmail</div>
+            <div class="value">yosiafarianto7</div>
           </div>
+
+          
         </a>
       </div>
     </div>
+
+    
   </section>
+
+
+
 </body>
 </html>
